# genomics_utilities

./: setup.cfg
genomics_utilities/: deseq_rpy2.py  differential_expression.py  generate_read_count_matrix.py  utilities.py  wrappers_deeptools.py
lit_nlp/examples/notebooks/: LIT_sentiment_classifier.ipynb
notebooks/: AlphaFold.ipynb
