[metadata]
name = genomics_utilities
version = 0.1.0
author = asmith
author_email = alastair.smith@ndcls.ox.ac.uk
description = Standard tools for genomics work
license = GNU GENERAL PUBLIC LICENSE Version 3
license_file = LICENSE
url = 


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires=
        pandas>=1
        pybedtools>=0.8.1
        papermill>=2.1.1
        plotly>=4.8.0
        xopen>=0.7.3
        pysam>=0.15.3
        gevent
        paramiko>=2.7.1
        sqlalchemy>=1.3.18
        cgatcore>=0.6.7
        cooler
        apsw
        ruffus
        drmaa
        joblib
        ipykernel
        natsort
        iced
        click
        ujson
        xxhash
        seaborn
        trackhub
        dask

[options.entry_points]
console_scripts = capcruncher = capcruncher.cli:cli

[options.extras_require]
stats = diffxpy
plotting = coolbox