[metadata]
name = genomics_utilities
version = 0.1.0
author = asmith
author_email = alastair.smith@ndcls.ox.ac.uk
description = Standard tools for genomics work
license = GNU GENERAL PUBLIC LICENSE Version 3
license_file = LICENSE
url = https://github.com/alsmith151/genomics_utilities


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires=
    rpy2
    pandas
    numpy
    pybedtools
    wget
    deeptools